Refactor reused items

--- a/bin/install
+++ b/bin/install
@@ -2,11 +2,14 @@
 
 set -e
 
+source "$(dirname "$0")/../lib/utils.sh"
+
 install_rakudo() {
   local download=$1
   local install=$2
-  echo "Installing rakudo.tar.gz to $install ..."
-  tar -xf "${download}/rakudo.tar.gz" -C $install --strip-components 1
+  local filename=$(tar_filename)
+  echo "Installing $filename to $install ..."
+  tar -xf "${download}/$filename" -C $install --strip-components 1
   echo "Install complete!"
 }
 
