--- a/bin/install
+++ b/bin/install
@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 
-set -e
+set -euo pipefail
 
 source "$(dirname "$0")/../lib/utils.sh"
 
@@ -13,4 +13,4 @@ install_rakudo() {
   echo "Install complete!"
 }
 
-install_rakudo $ASDF_DOWNLOAD_PATH $ASDF_INSTALL_PATH
+install_rakudo "$ASDF_DOWNLOAD_PATH" "$ASDF_INSTALL_PATH"
